# libbsp

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/libbsp/: AccessOutOfBoundsException.hpp  BSP.hpp  Decoder.hpp  MemoryStream.hpp
include/libbsp/Chunks/: ChunkHeader.hpp  ChunkType.hpp  ModelPart.hpp  Texture.hpp
include/libbsp/Primitives/: Rgba.hpp  Vector3.hpp
src/: BSP.cpp  Decoder.cpp  MemoryStream.cpp
src/Chunks/: ChunkHeader.cpp  ModelPart.cpp  Texture.cpp
src/Primitives/: Rgba.cpp  Vector3.cpp
